--- a/html/supporters/cinquieme_sens.html
+++ b/html/supporters/cinquieme_sens.html
@@ -52,7 +52,7 @@ crossorigin=""/>
     <span lang="en">Sensitive to its time, close to all of the beautiful perfumery actors and passionates, Cinquième Sens is putting all its know-how and experience to offer an innovative, unique and reachable place. Here are 80 m<sup>2</sup> of space, on bottom of the Eiffel Tower, including three levels of access, in the more flexible way : Olfawork, Olfaction and Olfalab.</span>
   </p>
   <p>
-    <span lang="fr">Pour en savoir plus sur </span><span lang="fr"><h2 class="text-size-14px">Cinquième sens et son espace de co-working, rendez-vous sur leur <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">site</a></h2></span>
+    <span lang="fr">Pour en savoir plus sur <h2 style="font-size: 14px;">Cinquième sens et son espace de co-working, rendez-vous sur leur <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">site</a></h2></span>
     <span lang="en">To find out more about <h2 class="text-size-14px">Cinquième Sens and its co-working space, follow the link to the <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">website</a></h2></span>
   </p>
 </div>
