--- a/html/_/video.html
+++ b/html/_/video.html
@@ -36,7 +36,9 @@ crossorigin=""/>
 <div class="modal fade in  my-modal show_modal_at_start go_to_main_page_after_closing_modal" tabindex="-1" role="dialog" id="Vidéo">
 <div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
-
+<div class="modal-header">
+        <h1 class="modal-title">Découvrir ScenTree</h1>
+</div>
 <div class="modal-body2">
   <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closevideo">
   <span aria-hidden="true">&times;</span>
