--- a/html/_/video.html
+++ b/html/_/video.html
@@ -37,10 +37,8 @@ crossorigin=""/>
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title">Découvrir ScenTree</h1>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closevideo">
-          <span aria-hidden="true">&times;</span>
-        </button>
+        <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="closevideo"><span aria-hidden="true">&times;</span></button>
+        <h1 class="text-center modal-title modal-title1">Découvrir ScenTree</h1>
       </div>
       <div class="modal-body2">
         <div class="embed-responsive embed-responsive-16by9">
