--- a/html/_/video.html
+++ b/html/_/video.html
@@ -39,6 +39,8 @@ crossorigin=""/>
       <div class="modal-header">
         <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="closevideo"><span aria-hidden="true">&times;</span></button>
         <h1 class="text-center modal-title modal-title1">Découvrir ScenTree</h1>
+        <br>
+        <h2 class="text-center">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
       </div>
       <div class="modal-body2">
         <div class="embed-responsive embed-responsive-16by9">
