--- a/html/_/video.html
+++ b/html/_/video.html
@@ -40,7 +40,7 @@ crossorigin=""/>
         <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="closevideo"><span aria-hidden="true">&times;</span></button>
         <h1 class="text-center modal-title modal-title1">Découvrir ScenTree</h1>
         <br>
-        <h2 class="text-center">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
+        <p><h2 class="text-center" style="font-size: 14px;">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2></p>
       </div>
       <div class="modal-body2">
         <div class="embed-responsive embed-responsive-16by9">
