--- a/html/_/video.html
+++ b/html/_/video.html
@@ -39,8 +39,9 @@ crossorigin=""/>
       <div class="modal-header">
         <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close" id="closevideo"><span aria-hidden="true">&times;</span></button>
         <h1 class="text-center modal-title modal-title1">Découvrir ScenTree</h1>
-        <br>
-        <p><h2 class="text-center" style="font-size: 14px;">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2></p>
+        <div class="row text-center">
+          <h2 class="text-center" style="font-size: 14px;">Crée en 2019, découvrez l'ensemble des fonctionnalités de ScenTree, la nouvelle classification des matières premières de parfum</h2>
+        </div>
       </div>
       <div class="modal-body2">
         <div class="embed-responsive embed-responsive-16by9">
