--- a/html/_/index.html
+++ b/html/_/index.html
@@ -9,7 +9,7 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Classification innovante des ingrédients parfum</title>
+<title>ScenTree - Classification innovante des ingrédients parfum</title>
 <title lang="en">ScenTree - The new collaborative perfumery ingredients classification</title>
 <!--Description Google-->
 <meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
