--- a/html/_/index.html
+++ b/html/_/index.html
@@ -48,8 +48,8 @@ crossorigin=""/>
   </button>
   <div class="dropdown-menu dropdown-menu-right  text-center" aria-labelledby="dropdownMenuButton-sm">
     <div class="btn-group btn-group-toggle" data-toggle="buttons">
-      <label class="btn btn-light to_french_radio_input"><input type="radio" name="options" id="option1" autocomplete="off" checked /><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></label>
-      <label class="btn btn-light to_english_radio_input"><input type="radio" name="options" id="option2" autocomplete="off" checked /><img src="../img/anglais.png" alt="ScenTree in english" class="imgen"></label>
+      <label class="btn btn-light to_french_radio_input"><input type="radio" name="options" id="option1" checked /><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></label>
+      <label class="btn btn-light to_english_radio_input"><input type="radio" name="options" id="option2" checked /><img src="../img/anglais.png" alt="ScenTree in english" class="imgen"></label>
     </div>
     <!--<button class="dropdown-item btn" type="button" data-toggle="modal" data-target="#lesNouveautes">Les nouveautés</button>-->
     <a class="dropdown-item btn  save_map_status_on_leaving  they_support_us__link" role="button" href="../_/support.html"><span lang="fr">Ils nous soutiennent  </span><span lang="en">They support us  </span><span><i class="fas fa-info-circle notifi1"></i></span></a>
