--- a/html/_/index.html
+++ b/html/_/index.html
@@ -71,7 +71,7 @@ crossorigin=""/>
 
 
 <!-- Class container corresponds à l'ensemble de la page-->
-<main role="main" class="flex-shrink-0 h-100">
+<main class="flex-shrink-0 h-100">
 
 <div class="container-fluid h-100 PageEntiere">
 <div class="row h-100">
