--- a/html/_/index.html
+++ b/html/_/index.html
@@ -156,7 +156,7 @@ crossorigin=""/>
     <p lang="en">Zoom and click on the wanted descriptor or ingredient</p>
   </div>
   <div id="RGPD_warning" class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
-    <div id="blanc1" class="row blockrgpd"></div>
+    <div class="row blockrgpd"></div>
     <div id="contenant" class="row">
       <div class=" col-offset-1 col-9 textRGPD" >
         <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de perfomances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
@@ -173,7 +173,7 @@ crossorigin=""/>
         </button>
       </div>
     </div>
-    <div id="blanc1" class="row blockrgpd"></div>
+    <div class="row blockrgpd"></div>
   </div>
   <div id="map" class="h-100-with-padding-60px-before-md"></div>
 </div>
