--- a/html/_/index.html
+++ b/html/_/index.html
@@ -252,7 +252,7 @@ crossorigin=""/>
       <span lang="en">Please select a category..</span>
     </button>
       <!--Desktop version-->
-    <h4 class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForNaturelles">
+    <div class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForNaturelles">
       <ul id="ongletsnat" class="navbar-nav nav nav-tabs mx-auto " role="tablist">
         <li class="nav-item">
           <a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link active" id="pills-tab1">
@@ -279,7 +279,7 @@ crossorigin=""/>
           </a>
         </li>
       </ul>
-    </h4>
+    </div>
   </nav>
 </div>
 <!--contenu des onglets-->
