--- a/html/_/index.html
+++ b/html/_/index.html
@@ -451,7 +451,7 @@ crossorigin=""/>
             <!--Onglets pour les amendements IFRA-->
             <div class="panel-heading m-0 p-0">
               <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-                <h4 class="collapse navbar-collapse text-size-16px m-0 p-0">
+                <div class="collapse navbar-collapse text-size-16px m-0 p-0">
                   <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="align-items: center;">
                     <li class="nav-item col-6">
                       <a class="nav-link active" id="pills-tab49" href="#tab49info" data-toggle="pill" aria-controls="tab49info" aria-selected="false"  >
@@ -466,7 +466,7 @@ crossorigin=""/>
                       </a>
                     </li>
                   </ul>
-                </h4>
+                </div>
               </nav>
             </div>  
           <div class="tab-content">
