--- a/html/_/index.html
+++ b/html/_/index.html
@@ -623,7 +623,8 @@ crossorigin=""/>
                                   <td>CAS N°</td>
                                   <td>
                                     <span lang="fr">Concentration estimée</span>
-                                    <span lang="en">Estimated Concentration</td>
+                                    <span lang="en">Estimated Concentration</span>
+                                  </td>
                                 </tr>
                               <tbody class="ingredients-containing-without-botanicals-48">
                               </tbody>
@@ -796,7 +797,8 @@ crossorigin=""/>
                                   <td>CAS N°</td>
                                   <td>
                                     <span lang="fr">Concentration estimée</span>
-                                    <span lang="en">Estimated Concentration</td>
+                                    <span lang="en">Estimated Concentration</span>
+                                  </td>
                                 </tr>
                               <tbody class="ingredients-containing-without-botanicals-49">
                               </tbody>
@@ -923,7 +925,7 @@ crossorigin=""/>
         <span lang="en">Please select a category..</span>
       </button>
     <!--Desktop version-->
-      <h4 class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForSynthetiques">
+      <div class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForSynthetiques">
         <ul id="ongletssynth" class="navbar-nav nav nav-tabs mx-auto" role="tablist">
           <li class="nav-item">
             <a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link active" id="pills-tab1">
@@ -950,7 +952,7 @@ crossorigin=""/>
             </a>
           </li>
         </ul>
-      </h4>
+      </div>
     </nav>
   </div>
   <!--contenu des onglets-->
