--- a/html/_/index.html
+++ b/html/_/index.html
@@ -928,7 +928,7 @@ crossorigin=""/>
       <div class="collapse navbar-collapse text-size-16px m-0 p-0" id="navbarForSynthetiques">
         <ul id="ongletssynth" class="navbar-nav nav nav-tabs mx-auto" role="tablist">
           <li class="nav-item">
-            <a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link active" id="pills-tab1">
+            <a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link active" id="pills-tab12">
               <span lang="fr">Présentation Générale</span>
               <span lang="en">General Presentation</span>
             </a>
@@ -1161,7 +1161,7 @@ crossorigin=""/>
                 <!--Onglets pour les amendements IFRA-->
                 <div class="panel-heading m-0 p-0">
                   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-                    <h4 class="collapse navbar-collapse text-size-16px m-0 p-0">
+                    <div class="collapse navbar-collapse text-size-16px m-0 p-0">
                       <ul class="navbar-nav nav nav-tabs mx-auto" role="tablist" style="align-items: center;">
                         <li class="nav-item col-6">
                           <a class="nav-link active" id="pills-tab49s" href="#tab49sinfo" data-toggle="pill" aria-controls="tab49sinfo" aria-selected="false"  >
@@ -1176,7 +1176,7 @@ crossorigin=""/>
                           </a>
                         </li>
                       </ul>
-                    </h4>
+                    </div>
                   </nav>
                 </div>  
 
@@ -1598,7 +1598,7 @@ integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqD
 crossorigin=""></script>
 
 
-<script src="../js/main.js" type="text/javascript"></script>
+<script src="../js/main.js"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140166656-1"></script>
@@ -1610,5 +1610,6 @@ if (Cookies.get('RGPD_no_cookie') == -1) {
   gtag('config', 'UA-140166656-1');
 };
 </script>
+</main>
 </body>
 </html>
