--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1085,7 +1085,7 @@ crossorigin=""/>
     </div>
 
     <!--Onglet chimie -->    
-    <div class="tab-pane fade" id="tab7info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-2">
+    <div class="tab-pane fade" id="tab7info" role="tabpanel">
       <div class="container-fluid">
         <div class="row">
 
