--- a/html/_/index.html
+++ b/html/_/index.html
@@ -960,7 +960,7 @@ crossorigin=""/>
   <div class="tab-content">
     
       <!--Onglet présentation générale-->
-    <div class="tab-pane fade show active" id="tab12info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-1">
+    <div class="tab-pane fade show active" id="tab12info" role="tabpanel">
       <div class="container-fluid">
         <div class="row">
           <!--1ère colonne-->
@@ -1132,7 +1132,7 @@ crossorigin=""/>
     </div>
 
     <!--Onglet Reglementation entier (pour les synthétiques) -->
-    <div class="tab-pane fade" id="tab8info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-3">
+    <div class="tab-pane fade" id="tab8info" role="tabpanel">
       <div class="container-fluid"> 
         <div class="row">
           <div class="col-12">
@@ -1538,7 +1538,7 @@ crossorigin=""/>
     </div><!--Fermeture de l'onglet reglementation-->
 
     <!--onglet Commentaires-->
-    <div class="tab-pane fade" id="tab10info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-4">
+    <div class="tab-pane fade" id="tab10info" role="tabpanel">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12">
