--- a/html/_/index.html
+++ b/html/_/index.html
@@ -99,7 +99,7 @@ crossorigin=""/>
   </div>
   <!--Recherche -->
   <div class="col-12 text-center align-items-start">
-  <form class="" action="" autocomplete="off" id="searchForm">
+  <form autocomplete="off" id="searchForm">
     <input lang="fr" type="search" class="searchinput  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
     <input lang="en" type="search" class="searchinput  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." />
   </form>
