--- a/html/_/index.html
+++ b/html/_/index.html
@@ -299,11 +299,13 @@ crossorigin=""/>
           <span id="modalbody-tenue" class="textitem"></span>
         </h3>
       </div>
+      <div>
         <h3 class="item d-inline text-size-16px">
           <span lang="fr"><b>Prix <sup class="fas fa-question-circle iconetab" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières premières peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b></span>
           <span lang="en"><b>Price <sup class="fas fa-question-circle iconetab" title="€ : 0 to 15 €/kg ; €€ : 15 to 50 €/kg; €€€ : 50 to 200 €/kg; €€€€ : 200 to 1000 €/kg; €€€€€ : 1000 €/kg and more. 1 € ≈ 1,1 USD. Raw materials cost can evolve according to various factors of their own."></sup> : </b></span>
           <span id="modalbody-price" class="textitem"></span>
         </h3>
+      </div>
       <p>
         <h3 class="item d-inline text-size-16px">
           <span lang="fr"><b>Aspect <sup class="fas fa-question-circle iconetab" title="Couleur et état physique de la matière première."></sup> :</b></span>
