--- a/html/_/index.html
+++ b/html/_/index.html
@@ -296,7 +296,7 @@ crossorigin=""/>
         <div class="item d-inline text-size-16px" style="background-color: blue;">
           <span lang="fr"><b>Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b></span>
           <span lang="en"><b>Volatility <sup class="fas fa-question-circle iconetab" title="Indication of the tenacity of the raw material (Head : a few minutes; Heart : a few hours; Base : sometimes a few days)."></sup> :</b></span>
-          <h3><span id="modalbody-tenue" class="textitem"></span></h3>
+          <h3 class="m-0 p-0"><span id="modalbody-tenue" class="textitem"></span></h3>
         </div>
       </p>
       <p>
