--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -34,14 +34,12 @@ crossorigin=""/>
 <!-- fixed navbar -->
 <nav class="navbar  fixed-top  fillright">
   <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="../_/scentree.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></a>
-<!--<div class="dropdown">
-  <button class="btn dropdown-toggle" type="button" id="dropdownSarchButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+<div class="dropdown">
+  <!--<button class="btn dropdown-toggle" type="button" id="dropdownSarchButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <img src="../img/search1.png" class="max-height-30px" alt="Rechercher …" />
-  </button>
-  <form action="" autocomplete="off"  class="dropdown-menu dropdown-menu-right p-0" aria-labelledby="dropdownSearchButton-sm">
-    <div class=""><input lang="fr" type="search" class="searchinput-sm  my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." /><input lang="en" type="search" class="searchinput-sm  my-search-bar  form-control" placeholder="Name (botanical) or CAS N°..." /></div>
-  </form>
-</div>-->
+  </button>-->
+  <button class="btn" href="../_/index.html"><i class="fas fa-reply"></i></button>
+</div>
 <div class="dropdown pl-2">
   <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <i class="fas fa-bars"></i>
