--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -38,7 +38,7 @@ crossorigin=""/>
   <!--<button class="btn dropdown-toggle" type="button" id="dropdownSarchButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <img src="../img/search1.png" class="max-height-30px" alt="Rechercher …" />
   </button>-->
-  <a href="../_/index.html"><i class="fas fa-reply" style="background-color: black;"></i></a>
+  <a href="../_/index.html"><i class="fas fa-reply" style="color: black;"></i></a>
 </div>
 <div class="dropdown pl-2">
   <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
