--- a/html/_/index.html
+++ b/html/_/index.html
@@ -191,10 +191,11 @@ crossorigin=""/>
       <div class="modal-header">
         <div class="container-fluid  d-inline-block">
           <div class="row">
-            <h1 class="col-12 col-md-6 font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
+            <h1 class="col-12 col-md-6 nomdescripteur">
+              <!--font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md-->
               <span id="modaltitle2" class="modal-title modal-title1"></span>
             </h1>
-            <h3 class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+            <h3 class="col-12 col-md-6 typedescripteur text-size-18px text-center-before-md text-align-right-strictly-after-md">
               <span id="modalheader-type2" class="modalheader-type"></span>
             </h3>
           </div>
@@ -437,6 +438,10 @@ crossorigin=""/>
               <b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b>
               <span id="modalbody-allergenes" class="textitem"></span>
           </h3>
+          <p class="lienarticlereglementation">
+            <span lang="fr">Pour en savoir d'avantage sur les allergènes en parfumerie, consultez notre <a href="../_/allergenes.html" target="_BLANK">article sur les allergènes</a></span>
+            <span lang="en">For more information on allergens used in perfumery, please consult our <a href="../_/allergenes.html" target="_BLANK">article about allergens</a></span>
+          </p>
         </div>
         <!--Fin du block allergènes-->
         <br>
