--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1148,6 +1148,10 @@ crossorigin=""/>
                 <b lang="en">Allergens <sup class="fas fa-question-circle iconetab" title="26 allergens are known in perfumery. Their use is limited to 10 ppm in finished products for non-rinced products (eaux de toilette for example), and 100 ppm for rinced products (shower gels for example)."></sup> :</b>
                 <span id="modalbody-allergenes1" class="textitem"></span>
               </h3>
+              <p class="lienarticlereglementation mt-3 mb-0">
+                <span lang="fr">Pour en savoir d'avantage sur les allergènes en parfumerie, consultez notre <a href="../_/allergenes.html" target="_BLANK">article sur les allergènes</a></span>
+                <span lang="en">For more information on allergens used in perfumery, please consult our <a href="../_/allergenes.html" target="_BLANK">article about allergens</a></span>
+              </p>
             </div>
             <!--Fin du block allergènes-->
             <br>
