--- a/html/_/index.html
+++ b/html/_/index.html
@@ -496,6 +496,15 @@ crossorigin=""/>
                         <span class="modalbody-ifra-48 textitem"></span>
                       </h3>
                       <br>
+                      <!--Cause d'apparition de l'ingrédients concerné-->
+                      <h3 class="cause d-inline text-size-14px IFRA-infos">
+                        <span>
+                          <b lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</b>
+                          <b lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
+                        </span>
+                        <span class="modalbody-cause-48 textitem"></span>
+                      </h3>
+                      <br>
                       <!--Amendement d'apparition de l'ingrédients concerné-->
                       <h3 class="amendment d-inline text-size-14px IFRA-infos">
                         <span>
@@ -508,8 +517,8 @@ crossorigin=""/>
                       <!--Commentaires-->
                       <h3 class="commentaires d-inline text-size-14px IFRA-infos">
                         <span>
-                          <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b>
-                          <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
+                          <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients."></sup> :</b>
+                          <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions."></sup> :</b>
                         </span>
                         <span class="modalbody-commentifra-48 textitem"></span>  
                       </h3>
@@ -685,8 +694,8 @@ crossorigin=""/>
                       <!--Commentaires-->
                       <h3 class="commentaires49 d-inline text-size-14px IFRA-infos">
                         <span>
-                          <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b>
-                          <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
+                          <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients."></sup> :</b>
+                          <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions."></sup> :</b>
                         </span>
                         <span class="modalbody-commentifra-49 textitem"></span>  
                       </h3>
@@ -1249,8 +1258,8 @@ crossorigin=""/>
                           <br>
                           <!--Commentaires-->
                           <h3 class="commentaires d-inline text-size-14px IFRA-infos">
-                              <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b>
-                              <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
+                              <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients."></sup> :</b>
+                              <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions."></sup> :</b>
                               <span class="modalbody-commentifra-48 textitem"></span>  
                           </h3>
                           
@@ -1423,8 +1432,8 @@ crossorigin=""/>
                           <br>
                           <!--Commentaires-->
                           <h3 class="commentaires49 d-inline text-size-14px IFRA-infos">
-                              <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b>
-                              <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions. The following mentions are valid for a high use of the raw material, or in case of hish sensitiveness for the raw material. Its use in perfumery being restricted, these risks are avoided in perfumes."></sup> :</b>
+                              <b lang="fr">Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients."></sup> :</b>
+                              <b lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions."></sup> :</b>
                               <span class="modalbody-commentifra-49 textitem"></span>  
                           </h3>
                           
