--- a/html/_/index.html
+++ b/html/_/index.html
@@ -500,7 +500,7 @@ crossorigin=""/>
                       <h3 class="cause d-inline text-size-14px IFRA-infos">
                         <span>
                           <b lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</b>
-                          <b lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</b>
+                          <b lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</b>
                         </span>
                         <span class="modalbody-cause-48 textitem"></span>
                       </h3>
@@ -680,6 +680,15 @@ crossorigin=""/>
                           <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="IFRA defines several types of restriction according to the nature and dangerousness of the concerned ingredient. "></sup> :</b>
                           <span class="modalbody-ifra-49 textitem"></span>
                         </span>
+                      </h3>
+                      <br>
+                      <!--Cause d'apparition de l'ingrédients concerné-->
+                      <h3 class="cause d-inline text-size-14px IFRA-infos">
+                        <span>
+                          <b lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</b>
+                          <b lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</b>
+                        </span>
+                        <span class="modalbody-cause-49 textitem"></span>
                       </h3>
                       <br>
                       <!--Amendement d'apparition de l'ingrédients concerné-->
@@ -1249,6 +1258,15 @@ crossorigin=""/>
                               <span class="modalbody-ifra-48 textitem"></span>
                           </h3>
                           <br>
+                          <!--Cause d'apparition de l'ingrédients concerné-->
+                          <h3 class="cause d-inline text-size-14px IFRA-infos">
+                            <span>
+                              <b lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</b>
+                              <b lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</b>
+                            </span>
+                            <span class="modalbody-cause-48 textitem"></span>
+                          </h3>
+                          <br>
                           <!--Amendement d'apparition de l'ingrédients concerné-->
                           <h3 class="amendment d-inline text-size-14px IFRA-infos">
                               <b lang="fr">Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b>
@@ -1421,6 +1439,15 @@ crossorigin=""/>
                               <b lang="fr">Type de restriction <sup class="fas fa-question-circle iconetab" title="L'IFRA défini plusieurs type de restriction en fonction de la nature de l'ingrédient concerné et de sa dangerosité."></sup> :</b>
                               <b lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="IFRA defines several types of restriction according to the nature and dangerousness of the concerned ingredient. "></sup> :</b>
                               <span class="modalbody-ifra-49 textitem"></span>
+                          </h3>
+                          <br>
+                          <!--Cause d'apparition de l'ingrédients concerné-->
+                          <h3 class="cause d-inline text-size-14px IFRA-infos">
+                            <span>
+                              <b lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</b>
+                              <b lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</b>
+                            </span>
+                            <span class="modalbody-cause-49 textitem"></span>
                           </h3>
                           <br>
                           <!--Amendement d'apparition de l'ingrédients concerné-->
