--- a/html/_/index.html
+++ b/html/_/index.html
@@ -524,7 +524,7 @@ crossorigin=""/>
                       </h3>
 
                       <!--Blocktable contient tout les tableaux + les paragraphes de responsabilité et le lien vers les modaux IFRA-->
-                      <div class="blocktable">
+                      <div class="blocktable" style="background-color: blue;">
                         <!-- Là on arrive dans les types de tableau, il y en a 3 . Ils dépendent du contenu de modalbody-ifra (type d'amendement)-->
                         <div class="table-responsive text-center">
                               <table class="table1 main-48th-IFRA-table IFRA-table">
